--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,194 @@
 @charset "UTF-8";
 
+body{
+    display: auto;
+    margin: 0;
+}
+
+#header{
+    border: thin solid red;
+    background-color: orange;
+    padding: 10px 0;
+    text-align: center;
+}
+
+#header h4{
+    color: white;
+}
+
+#lead{
+    border: thin solid red;
+    width: 100%;
+    background-color: blue;
+    margin: auto;  
+}
+
+.duas-colunas{
+    position: relative;
+    max-width: 1200px;
+    height: 500px;
+    background-color: aqua;
+    margin: 0;
+    margin: auto;  
+}
+
+.slide{
+    float: left;
+    background-color: grey;
+    width: 50%;
+    min-width: 397px;
+    max-width: 100%;
+    position: relative;
+    display: flex;
+}
+
+/* começo painel slider*/
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/* Fim painel slider*/
+
+.conteudo-lead{
+    float: left;
+    background-color: purple;
+    width: 50%;
+    min-width: 397px;
+    max-width: 100%;
+    position: relative;
+    display: flex;
+}
+
+
+#oferta{
+    display: inline;
+    border: thin solid red;
+}
+#conteudo{
+    border: thin solid red;
+}
+#promocao{
+    border: thin solid red;
+}
+#avaliacao{
+    border: thin solid red;
+}
+#selo{
+    border: thin solid red; 
+}
+#duvidas{
+    border: thin solid red;
+}
+#rodape{
+    border: thin solid red;
+}
+
+h1, h2, h3, h4, h5, h6{
+    font-family: Poppins,sans-serif;
+    font-weight: 700;
+    padding: 0;
+    margin: 0;
+    line-height: 1;
+    color: orange;
+}
+
+h1{
+    font-size: 30px;
+}
+
+h4{
+    font-size: 16px;
+}
+
+p{
+    font-family: Montserrat, sans-serif;
+}
+
+img{
+    max-width: 100%;
+}
